fix(results-page): fix z-index issue between search bar panels and map

--- a/src/components/Results/ResultMap.css
+++ b/src/components/Results/ResultMap.css
@@ -5,6 +5,7 @@
 .leaflet-container{
     height: 100%;
     width: 100%;
+    z-index: 0;
 }
 
 .leaflet-popup-content-wrapper {
